<resources>
    <string name="app_name">ZTrove</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_yet_registered_signup_now">Not yet Registered? signup now</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="signup">Signup</string>
</resources>