<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/zt2"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_texts">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="328dp"
                android:layout_height="42dp"
                app:srcCompat="@drawable/fblogo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_texts"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password2"
                android:background="@drawable/custom_texts"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_person_24"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/purple"
                android:shadowRadius="10"
                />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                tools:visibility="invisible" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:id="@+id/backButton"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/back"
        />


</LinearLayout>